[package]
name = "serverless_workflow_builders"
version = "1.0.0-alpha6"
edition = "2021"
authors = ["The Serverless Workflow Authors <cncf.serverless.workflow@gmail.com>"]
description = "Contains services used to build ServerlessWorkflow workflow definitions programatically"
homepage = "https://serverlessworkflow.io"
repository = "https://github.com/serverlessworkflow/sdk-rust"
documentation = "https://github.com/serverlessworkflow/sdk-rust"
license = "Apache-2.0"
keywords = ["serverless-workflow", "sdk", "builders"]
categories = ["config", "parsing", "serialization", "data-structures", "api-bindings"]

[dependencies]
serverless_workflow_core = { path = "../core", version = "1.0.0-alpha6" }
serde_json = "1.0" 
serde_yaml = "0.9"