[package]
name = "serverless_workflow_core"
version = "1.0.0-alpha6.2"
edition = "2021"
authors = ["The Serverless Workflow Authors <cncf.serverless.workflow@gmail.com>"]
description = "Contains Serverless Workflow DSL models"
homepage = "https://serverlessworkflow.io"
repository = "https://github.com/serverlessworkflow/sdk-rust"
documentation = "https://github.com/serverlessworkflow/sdk-rust"
license = "Apache-2.0"
keywords = ["serverless-workflow", "sdk", "core"]
categories = ["config", "parsing", "data-structures", "api-bindings"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0" 
serde_yaml = "0.9"